--- a/templates/upload.html
+++ b/templates/upload.html
@@ -17,6 +17,7 @@
                     <a href="/" class="nav-link">Home</a>
                     <a href="/upload" class="nav-link active">Analyze</a>
                     <a href="/compare" class="nav-link">Compare</a>
+                    <a href="/how-it-works" class="nav-link">How It Works</a>
                     <a href="/pricing" class="nav-link">Pricing</a>
                 </nav>
             </div>
