--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - FinePrint Simplifier</title>
+    <title>Admin Login - Small Print Checker</title>
     <link rel="stylesheet" href="/static/style.css">
     <style>
         .login-container {
@@ -111,7 +111,7 @@
     <div class="login-container">
         <div class="login-header">
             <h1>🔐 Admin Login</h1>
-            <p>FinePrint Simplifier Administration</p>
+            <p>Small Print Checker Administration</p>
         </div>
         
         {% if error %}
