--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pricing - Fineprint Simplifier</title>
+    <title>Pricing - Small Print Checker</title>
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
 </head>
